--- a/package.json
+++ b/package.json
@@ -10,5 +10,5 @@
       "type": "git",
       "url": "https://github.com/chikoos/devops_test1.git"
     },
-    "author": "Sunil Singhal",
+    "author": "Sunil Singhal"
   }
