--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
       "type": "git",
       "url": "https://github.com/chikoos/devops_test1.git"
     },
+    dependencies: {
+        "express": "4.16.4"
+    },
     "author": "Sunil Singhal"
   }
